--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
 
     <div class="d-flex justify-content-center align-items-center" style="width: 100vw;">
         <section class="login-box">
-            <h2 class="text-white">Entrar</h2>
+            <h2 class="text-white">Enter</h2>
             <form class="mt-4">
                 <div class="mb-3 bg-white rounded px-2" >
-                  <label for="exampleInputEmail1" class="form-label small-text">Email ou número de telefone</label>
+                  <label for="exampleInputEmail1" class="form-label small-text">No login needed</label>
                   <input type="email" class="form-control border-0 p-0" id="exampleInputEmail1" aria-describedby="emailHelp">
                   
                 </div>
                 <div class="mb-3 bg-white rounded px-2">
-                  <label for="exampleInputPassword1" class="form-label small-text">Senha</label>
+                  <label for="exampleInputPassword1" class="form-label small-text">No password needed</label>
                   <input type="password" class="form-control border-0 p-0" id="exampleInputPassword1">
                 </div>
-                <a href="landing.html" type="submit" class="btn btn-danger mt-3" style="width: 100%;">Entrar</a>
+                <a href="landing.html" type="submit" class="btn btn-danger mt-3" style="width: 100%;">Lets Go!</a>
                 <div class="mb-3 mt-3 form-check">
                   <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <label class="form-check-label text-white small-text" for="exampleCheck1">Lembre-se de mim</label>
+                  <label class="form-check-label text-white small-text" for="exampleCheck1">Remember Me</label>
                 </div>
                 
                 <div class="mt-3 ">
-                    <p class="m-0  text-white"> <span style="color: rgba(212, 212, 212, 0.75);">Novo por aqui?</span> Assine agora</p>
-                    <p class="m-0 small-text text-white  mt-2"> <span style="color: rgba(212, 212, 212, 0.75);">Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <a href="#"> Saiba mais.</a></span> </p>
+                    <p class="m-0  text-white"> <span style="color: rgba(212, 212, 212, 0.75);">We disabled logins</span> To keep everything free!</p>
+                    <p class="m-0 small-text text-white  mt-2"> <span style="color: rgba(212, 212, 212, 0.75);">Dont forget everything here is in the honor of the one and only Harambe. <a href="https://www.beefthroat.com"> HARAMBE.</a></span> </p>
                 </div>
               </form>
         </section>
