--- a/landing.html
+++ b/landing.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./landing.css">
     <link rel="stylesheet" href="./responsive.css">
-    <title>Neflix</title>
+    <title>Haramflix</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
@@ -36,7 +36,7 @@
             </div>
             <div class="netflix-dropdown-box dropdown">
               <button class="netflix-dropdown dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                Navegar
+                Navigation (and shit)
               </button>
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="https://beefthroat.com/collections/never-forget-harambe">Harambe :</a></li>
@@ -497,7 +497,7 @@
         </div>
         <div class="container-fluid  slide2">
           <section class="d-flex justify-content-between margin-right margin-title">
-            <p class="text-white"> <b>Animes</b> </p>
+            <p class="text-white"> <b>More about Harambe's Life</b> </p>
             <div class="">
               <button  type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active tab-change-btn" aria-current="true" aria-label="Slide 1"></button>
               <button class="tab-change-btn" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -898,18 +898,18 @@
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previsão</span>
+              <span class="visually-hidden">Beefthroat.com</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Próximo
+              <span class="visually-hidden">Beefthroat.com
               </span>
             </button>
           </div>
         </div>
         <div class="container-fluid  slide3">
           <section class="d-flex justify-content-between margin-right margin-title2">
-            <p class="text-white"> <b>Bombando</b> </p>
+            <p class="text-white"> <b>The Gorilla, The Myth, The Legend</b> </p>
             <div class="">
               <button  type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active tab-change-btn" aria-current="true" aria-label="Slide 1"></button>
               <button class="tab-change-btn" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
