--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <h2 class="text-white">Enter</h2>
             <form class="mt-4">
                 <div class="mb-3 bg-white rounded px-2" >
-                  <label for="exampleInputEmail1" class="form-label small-text">No login needed</label>
+                  <label for="exampleInputEmail1" class="form-label small-text">Harambe Didnt Believe in Logins</label>
                   <input type="email" class="form-control border-0 p-0" id="exampleInputEmail1" aria-describedby="emailHelp">
                   
                 </div>
                 <div class="mb-3 bg-white rounded px-2">
-                  <label for="exampleInputPassword1" class="form-label small-text">No password needed</label>
+                  <label for="exampleInputPassword1" class="form-label small-text">Harambe Didnt Ask Permission</label>
                   <input type="password" class="form-control border-0 p-0" id="exampleInputPassword1">
                 </div>
                 <a href="landing.html" type="submit" class="btn btn-danger mt-3" style="width: 100%;">Lets Go!</a>
