--- a/landing.html
+++ b/landing.html
@@ -71,8 +71,9 @@
                 <section class="left">
                     <img src="./images/image2.png" alt="">
                 
-                    <div class="d-flex mt-2">
-                      <button class="btn btn-light m-2" > <i class="bi bi-play-fill" style="color: black; padding: 0%;"></i> Watch Harambe </button>
+                    <a href="http://www.beefthroat.com" target="_blank" class="btn btn-light m-2">
+                    <i class="bi bi-play-fill" style="color: black; padding: 0%;"></i> Watch Harambe
+                  </a>
                       <button class="btn btn-secondary m-2"><i class="bi bi-info-circle" style=" padding: 0%;"></i> More Harambe Details</button>
                     </div>
                 </section>
