--- a/landing.html
+++ b/landing.html
@@ -197,7 +197,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img5.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
