--- a/landing.html
+++ b/landing.html
@@ -219,7 +219,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img6.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -243,7 +245,9 @@
               <div class="carousel-item">
                 <section class="d-flex">
                   <div class="card">
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img7.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -263,7 +267,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img8.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -283,7 +289,9 @@
                   </div>
                   </div>
                   <div class="card">
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img9.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -303,7 +311,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img10.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -323,7 +333,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img11.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -343,7 +355,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img12.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -367,7 +381,9 @@
               <div class="carousel-item">
                 <section class="d-flex" >
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img13.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -387,7 +403,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img14.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -407,7 +425,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img15.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -427,7 +447,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img16.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -447,7 +469,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img17.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -467,7 +491,9 @@
                   </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img18.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -491,11 +517,11 @@
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previsão</span>
+              <span class="visually-hidden">Harambe</span>
             </button>
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Próximo</span>
+              <span class="visually-hidden">Beefthroat Apparel</span>
             </button>
           </div>
         </div>
@@ -514,7 +540,9 @@
               <div class="carousel-item active">
                 <section class="d-flex" >
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/anime/img1.webp" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                         <section class="d-flex justify-content-between">
                           <div>
