--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="pt-br">
   <head>
+    import { Analytics } from "@vercel/analytics/react"
     <!-- Required meta tagss for new branch -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
