--- a/landing.html
+++ b/landing.html
@@ -102,7 +102,9 @@
               <div class="carousel-item active">
                 <section class="d-flex">
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img1.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                         <section class="d-flex justify-content-between">
                           <div>
@@ -122,7 +124,9 @@
                     </div>
                   </div>
                   <div class="card">
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img2.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -142,7 +146,9 @@
                   </div>
                   </div>
                   <div class="card">
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img3.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
@@ -177,7 +183,9 @@
                     </div>
                   </div>
                   <div class="card" >
+                    <a href="https://beefthroat.com/collections/never-forget-harambe" target="_blank">
                     <img src="./images/trending/img4.jpg" class="card-img-top" alt="Nations Best Harambe Swag and Apparel">
+                    </a>
                     <div class="card-body"> 
                       <section class="d-flex justify-content-between">
                         <div>
